bk_ida/gccida/g2/optimize_sibling_and_tail_recursive_calls
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1078:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1078:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1079:4: error: expected ';' after expression
rtx v43; // r10 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1079:5: error: use of undeclared identifier 'v43'
rtx v43; // r10 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1084:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1084:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1085:4: error: expected ';' after expression
rtx v49; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1085:5: error: use of undeclared identifier 'v49'
rtx v49; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1086:4: error: expected ';' after expression
rtx v50; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1086:5: error: use of undeclared identifier 'v50'
rtx v50; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1087:4: error: expected ';' after expression
rtx v51; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1087:5: error: use of undeclared identifier 'v51'
rtx v51; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1089:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1089:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1090:4: error: expected ';' after expression
rtx v54; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1090:5: error: use of undeclared identifier 'v54'
rtx v54; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1091:4: error: expected ';' after expression
rtx v55; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1091:5: error: use of undeclared identifier 'v55'
rtx v55; // rdx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1092:4: error: expected ';' after expression
rtx v56; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/optimize_sibling_and_tail_recursive_calls/src/obj/sibcall.o] Error 1
